# TriangInfos

./: README.md  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
src/backend/: .dockerignore  .env.sample  Dockerfile.dev  pyproject.toml
src/backend/api/: app.py  config.py  routers.py  schemes.py  services.py
src/backend/tests/: test_api.py  test_config.py  test_schemes.py  test_services.py
src/backend/tests/api/: test_abc.py  test_bh.py  test_index.py  test_perimetro.py
src/backend/tests/env_files/: env1
src/frontend/: .dockerignore  Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.js
src/frontend/TriangInfos/src/: App.vue  main.js
src/frontend/TriangInfos/src/components/: ErrorVue.vue  FormVue.vue
src/frontend/TriangInfos/src/stores/: core.js
src/frontend/src/: App.vue  main.js
src/frontend/src/components/: FormAreaABC.vue  FormAreaBH.vue  FormPerimetro.vue  FormVue.vue  PerimetroResult.vue  ResultVue.vue
src/frontend/src/router/: index.js
src/frontend/src/stores/: core.js
src/frontend/src/utils/: api.js
src/frontend/src/views/: FormulaABC.vue  FormulaBH.vue  FormulaPerimetro.vue  Home.vue
